# ai-resume-analyzer

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-image.yaml  deploy-frontend.yaml  deploy-iac.yaml  destroy-infra.yaml  push-to-ecr.yaml
docker/: Dockerfile.file_handler  Dockerfile.frontend  Dockerfile.start_pdf_text_extraction
frontend/: app.py
frontend/.streamlit/: config.toml
infra/: api_gateway.tf  ecr.tf  ecr_policy.tf  encryption.tf  frontend.tf  iam.tf  lambda_file_handler.tf  lambda_start_pdf_text_extraction.tf  main.tf  networking.tf  outputs.tf  s3.tf  sns.tf  sqs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
resume_analyzer/commons/: models.py  sqs.py  textract.py  utils.py
resume_analyzer/lambdas/file_handler/: __init__.py  handler.py
resume_analyzer/lambdas/start_pdf_text_extraction/: __init__.py  handler.py
